--- a/docs/assets/css/base.scss
+++ b/docs/assets/css/base.scss
@@ -22,7 +22,7 @@ body {
   font-size: 0.40em;
   line-height: $body-line-height;
   color: $body-text-color;
-  background-color: $body-background-color;
+  background-color: #27262b;
 }
 
 ol,
