--- a/docs/assets/css/just-the-docs-default.css
+++ b/docs/assets/css/just-the-docs-default.css
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6 { margin-top: 0; margin-bottom: 1em; font-weight: 500; li
 
 p { margin-top: 1em; margin-bottom: 1em; }
 
-a { color: #2c84fa; text-decoration: none; }
+a { color: red; text-decoration: none; }
 
 a:not([class]) { text-decoration: none; background-image: linear-gradient(#44434d 0%, #44434d 100%); background-repeat: repeat-x; background-position: 0 100%; background-size: 1px 1px; }
 
