--- a/docs/assets/css/base.scss
+++ b/docs/assets/css/base.scss
@@ -22,7 +22,7 @@ body {
   font-size: 1em;
   line-height: $body-line-height;
   color: #FF0000;
-  background-color: #27262b;
+  background-color: black;
 }
 
 ol,
